@@ -1,3 +1,6 @@
+2020-05-05         [RELEASE] Release of filefill 3.2.2 (Nicole Cordes)
+2020-05-05 9c7769b [TASK] Use proper return value in symfony commands (Björn Fromme)
+
 2020-04-22         [RELEASE] Release of filefill 3.2.1 (Nicole Cordes)
 2020-04-22 c9296ac [TASK] Raise compatibility to TYPO3 10.4 (Nicole Cordes)
 2020-04-07 d1d483f [BUGFIX] Use RequestFactory for http requests (Nicole Cordes)
